--- a/yakup1.html
+++ b/yakup1.html
@@ -5,6 +5,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-9" />
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1254">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-8">
+<meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+<meta charset="ISO-8859-1">
+
 <meta charset="UTF-8"/>
 <meta name="Keywords" content="Hosting,'Alan Adı'"/>
 <meta name="Description" content="Yakup Altun."/>
